# rust_mini_ai

./: Cargo.toml  convert_data.py
src/: lib.rs
src/data_reading/: read_json.rs
src/matrix_multiplication/: matrix_multiply.rs  mod.rs
src/visualization/: black_and_white.rs  mod.rs
tests/: matrix_multiply.rs  read_json.rs  visualize.rs
