[package]
name = "miniai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
